--- a/client.html
+++ b/client.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
   <link rel="stylesheet" href="style.css">
-<title>Client Area</title>
+<title>Espace Client</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link
       href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap"
@@ -350,38 +350,38 @@ body {text-align:center;background-color:#eb081b}
     <div class="forms-in">
       <div class="forms-in">
         <div id="registration-page" class="hide">
-          <h1 style="color:green;">JstMStudio Client Area</h1>
-          <h3>Sign Up</h3>
-          Email <br />
-          <input type="email" id="registration-email" /><br />
-          Confirm Email <br />
-          <input
+          <h1 style="color:green;">Jst polyvalent lieu de travail Espace Client</h1>
+          <h3>Inscrivez-vous</h3>
+           E-mail <br />
+           <input type="email" id="registration-email" /><br />
+           Confirmer l'e-mail <br />
+           <input
             type="email"
             id="registration-reemail"
             autocomplete="disable"
           /><br />
-          Password <br />
-          <input type="password" id="registration-password" /><br />
-          <center><button id="register">Sign Up</button></center>
-          <button id="show-login">Sign In</button>
+           Mot de passe <br />
+           <input type="password" id="registration-password" /><br />
+           <center><button id="register">S'inscrire</button></center>
+           <button id="show-login">Connexion</button>
         </div>
 
         <div id="login-page"> 
-        <h1 style="color:green;">JstMStudio Client Area</h1>
-          <h3>Sign In</h3>
-          Email <br />
-          <input type="email" id="login-email" /><br />
-          Password <br />
-          <input type="password" id="login-password" /><br />
-          <p id="forgot-password">Forgot Password</p>
-          <center><button id="login">Sign In</button></center>
-          <button id="show-register">Sign Up</button>
+        <h1 style="color:green;">Jst polyvalent lieu de travail Espace Client</h1>
+          <h3>Connexion</h3>
+           E-mail <br />
+           <input type="email" id="login-email" /><br />
+           Mot de passe <br />
+           <input type="password" id="login-password" /><br />
+           <p id="forgot-password">Mot de passe oublié</p>
+           <center><button id="login">Connexion</button></center>
+           <button id="show-register">S'inscrire</button>
         </div>
 
         <div id="homepage" class="hide">
-          <button id="signout">Sign Out</button>
-          <h3>Logged In</h3>
-          <p>You are now logged into your account of JstMStudio.</p>
+          <button id="signout">Se déconnecter</button>
+           <h3>Connecté</h3>
+           <p>Vous êtes maintenant connecté à votre compte de Jst polyvalent lieu de travail.</p>
         </div>
       </div>
     </div>
