--- a/home.html
+++ b/home.html
@@ -453,34 +453,34 @@ body.magenta-mode {
     </ul>
   </div>
   <section class="home-section">
-<h1>Home</h1>
+<h1>Accueil</h1>
 <br>
-<h2>Welcome to <strong style="color:red;">JstMStudio!</strong></h2>
+<h2>Bienvenue dans <strong style="color:red;">Jst polyvalent lieu de travail !</strong></h2>
 <br>
-<hr>
+<h>
 <br>
-<h2><a href="documentation.html">Documentation</a></h2>
-<p>JstMStudio provide a free-to-use easy to understand documentation. A place for you to get help to use JstMStudio with documentation articles written by the team. </p>
+<h2><a href="documentation.html">Documents</a></h2>
+<p>Jst polyvalent lieu de travail fournit une documentation gratuite et facile à comprendre. Un endroit où vous pouvez obtenir de l'aide pour utiliser Jst polyvalent lieu de travail avec des articles de documentation écrits par l'équipe. </p>
 <br>
-<hr>
+<h>
 <br>
-<h2><a href="project.html">Project</a></h2>
-<p>JstMStudio currently have and maintained many projects across many industries sector, like software, book series, video series and etc. We also have many originals project for JstMStudio. </p>
+<h2><a href="project.html">Projet</a></h2>
+<p>Jst polyvalent lieu de travail a actuellement et maintient de nombreux projets dans de nombreux secteurs industriels, comme les logiciels, les séries de livres, les séries de vidéos, etc. Nous avons également de nombreux projets originaux pour Jst polyvalent lieu de travail. </p>
 <br>
-<hr>
+<h>
 <br>
-<h2><a href="web-app.html">Web App</a></h2>
-<p>JstMStudio also has a web app. JstMStudio Web App is included with many amazing features made by the team. JstMStudio Web App is a free, open source and multipurpose web app as well. </p>
+<h2><a href="web-app.html">Application Web</a></h2>
+<p>Jst polyvalent lieu de travail dispose également d'une application Web. L'application Web Jst polyvalent lieu de travail est incluse avec de nombreuses fonctionnalités étonnantes créées par l'équipe. Jst polyvalent lieu de travail Web App est également une application Web gratuite, open source et polyvalente. </p>
 <br>
-<hr>
+<h>
 <br>
 <h2><a href="api.html">API</a></h2>
-<p>JstMStudio also provide a free-to-use API for all developers in the world to integrate our services into their own website for free with no additional cost. Users could use prebuilt code for our API to integrate it to their own website. </p>
+<p>Jst polyvalent lieu de travail fournit également une API gratuite à tous les développeurs du monde pour intégrer nos services dans leur propre site Web gratuitement et sans frais supplémentaires. Les utilisateurs peuvent utiliser du code prédéfini pour notre API afin de l'intégrer à leur propre site Web. </p>
 <br>
-<hr>
+<h>
 <br>
-<h2><a href="store.html">Store</a></h2>
-<p>JstMStudio also has a store where JstMStudio sold products made by the team or external companies. JstMStudio Store is the main stream revenue for the team to earn profits to fund the team programs and projects. </p>
+<h2><a href="store.html">Magasin</a></h2>
+<p>Jst polyvalent lieu de travail dispose également d'un magasin où Jst polyvalent lieu de travail vend des produits fabriqués par l'équipe ou des sociétés externes. Jst polyvalent lieu de travail Store est le principal flux de revenus permettant à l'équipe de réaliser des bénéfices pour financer les programmes et projets de l'équipe. </p>
 <br><br>
   <hr>
   <br>
