--- a/index.html
+++ b/index.html
@@ -392,39 +392,38 @@ background-color: black;
     </ul>
   </div>
   <section class="home-section">
-  <h1>JstMStudio</h1>
+  <h1>Jst polyvalent lieu de travail</h1>
   <br>
-<p><strong>Welcome to JstMStudio! A 100% free place where privacy matter the most!</strong></p>
+<p><strong>Bienvenue sur Jst polyvalent lieu de travail ! Un endroit 100 % gratuit où la confidentialité compte le plus !</strong></p>
 <br>
-<hr>
+<h>
 <br>
-<h2 id="aboutus">About Us</h2>
-<p>JstMStudio is a small studio founded by Jst Tan. JstMStudio is focused on many things, from music, story writing, website development and much more. JstMStudio is a small remote indie studio that focuses on many things to build a better future.</p>
+<h2 id="aboutus">À propos de nous</h2>
+<p>Jst polyvalent lieu de travail est un petit studio fondé par Jst Tan. Jst polyvalent lieu de travail se concentre sur beaucoup de choses, de la musique, l'écriture d'histoires, le développement de sites Web et bien plus encore. Jst polyvalent lieu de travail est un petit studio indépendant distant qui se concentre sur de nombreuses choses pour construire un avenir meilleur.</p>
 <br>
-<hr>
+<h>
 <br>
 <h2 id="opensource">Open Source + Transparent</h2>
-<p>JstMStudio projects are fully open source for everyone to view, study and use our source codes under MIT open source licenses in our Github organization <a href="https://github.com/One-Future-Unified-Team">here</a>. We currently do not and have no plans of closed source software. We also proritize our user privacy across all of our projects so users could use our features and project safely without leaking their privacy. We also collect less users' data from our projects then any other companies and we do not share or sold any of the data collected by us. We also keep all data secure safely in our data and we do not create a profile for each and all of our users too.</p>
+<p>Les projets JstMStJst polyvalent lieu de travailudio sont entièrement open source pour que chacun puisse voir, étudier et utiliser nos codes sources sous licences open source MIT dans notre organisation Github <a href="https://github.com/One-Future-Unified-Team" >ici</a>. Nous n'avons actuellement pas et n'avons aucun projet de logiciel à source fermée. Nous accordons également la priorité à la confidentialité de nos utilisateurs dans tous nos projets afin que les utilisateurs puissent utiliser nos fonctionnalités et projeter en toute sécurité sans divulguer leur vie privée. Nous collectons également moins de données d'utilisateurs de nos projets que toute autre entreprise et nous ne partageons ni ne vendons aucune des données que nous collectons. Nous conservons également toutes les données en toute sécurité dans nos données et nous ne créons pas non plus de profil pour chacun de nos utilisateurs.</p>
 <br>
-<p>JstMStudio also offers a lot of transparency to our inner functionality and etc. We provide a transparent layer between the team and the public, like our finances, members, position roles and much more!</p>
+<p>Jst polyvalent lieu de travail offre également beaucoup de transparence sur nos fonctionnalités internes, etc. Nous fournissons une couche transparente entre l'équipe et le public, comme nos finances, nos membres, nos rôles et bien plus !</p>
 <br>
-<hr>
+<h>
 <br>
-<h2 id="safeenvironment">Safe Environment</h2>
-<p>Here in JstMStudio, we provide the 1st safest envinronment on the World Wide Web (WWW). We tightly and strictly moderate each and all contents put onto our platform and website. We also have a Community Guidelines that we strictly enforced on our community to keep it safe and clean.</p>
+<h2 id="safeenvironment">Environnement sûr</h2>
+<p> Ici, dans Jst polyvalent lieu de travail, nous fournissons le 1er environnement le plus sûr sur le World Wide Web (WWW). Nous modérons étroitement et strictement chacun des contenus mis sur notre plateforme et notre site Web. Nous avons également des directives communautaires que nous avons strictement appliquées à notre communauté pour la garder sûre et propre.</p>
 <br>
-<hr>
+<h>
 <br>
-<h2 id="originals">Originals</h2>
-<p>JstMStudio platform also has many awesome originals made by the animation studio of JstMStudio. We currently has many types of originals across all of our platforms, like audiobooks, videos, books and much more! All of our originals released early on our platform then any places else too. Some of our originals includes:</p>
+<h2 id="originals">Originaux</h2>
+<p>La plate-forme Jst polyvalent lieu de travail propose également de nombreux originaux impressionnants réalisés par le studio d'animation de Jst polyvalent lieu de travail. Nous avons actuellement de nombreux types d'originaux sur toutes nos plateformes, comme des livres audio, des vidéos, des livres et bien plus encore ! Tous nos originaux sont sortis tôt sur notre plateforme, puis partout ailleurs. Certains de nos originaux incluent :</p>
 <br>
-<li>Teenager Heroes</li>
+<li>Héros adolescents</li>
 <br>
-<hr>
+<h>
 <br>
-<h2 id="uptime">100% Uptime</h2>
-<p>We also provide a 100% uptime everyday in JstMStudio too. We covered you with all of our services with 100% uptime! We also maintain and track our site to keep our site up everyday throughout the year and inform everyone when our site is down. 
-<br><br>
+<h2 id="uptime">100 % de disponibilité</h2>
+<p>Nous fournissons également une disponibilité de 100 % tous les jours dans Jst polyvalent lieu de travail. Nous vous avons couvert avec tous nos services avec une disponibilité de 100 % ! Nous maintenons et suivons également notre site pour maintenir notre site actif tous les jours tout au long de l'année et informer tout le monde lorsque notre site est en panne.<br><br>
   <hr>
   <br>
 <h1>Thèmes</h1>
