--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <title>Profil</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -618,36 +618,36 @@ text-align: center;
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
 <h1>Extension</h1>
-      <p>JstMStudio Profile is the first ever social site that actually provide support to extension on users profile and posts. An extension is a software add-on that is installed on a program, enhancing its capabilities. Users could choose from a vary of extension to use in their profile and post in JstMStudio Profile extension library. JstMStudio Profile extension is built by official staff team and the community.<br><br>Users could install all plugins here into their code by adding it before the post elements end or on their profile. Please install the plugin by copying and pasting the code below.</p>
+      <p>Jst polyvalent lieu de travail Profile est le tout premier site social qui fournit réellement un support à l'extension sur le profil et les publications des utilisateurs. Une extension est un logiciel complémentaire qui est installé sur un programme, améliorant ses capacités. Les utilisateurs peuvent choisir parmi une gamme d'extensions à utiliser dans leur profil et publier dans la bibliothèque d'extensions de profil Jst polyvalent lieu de travail. L'extension de profil Jst polyvalent lieu de travail est construite par l'équipe officielle du personnel et la communauté.<br><br>Les utilisateurs peuvent installer tous les plugins ici dans leur code en l'ajoutant avant la fin des éléments de publication ou sur leur profil. Veuillez installer le plugin en copiant et collant le code ci-dessous.</p>
       <br>
-      <hr>
+      <h>
       <br>
-      <h2>Clap</h2>
-      <p>Clap is one of the official extension of the JstMStudio Profile. It could be used in JstMStudio Profile users post. Users could clap to users post when this plugin installed.</p>
-      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fclap.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+      <h2>Applaudissements</h2>
+      <p>Clap est l'une des extensions officielles du profil Jst polyvalent lieu de travail. Il pourrait être utilisé dans la publication des utilisateurs du profil Jst polyvalent lieu de travail. Les utilisateurs pouvaient applaudir les messages des utilisateurs lorsque ce plugin était installé.</p>
+      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fclap.html&style =github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
       <br>
-      <hr>
+      <h>
       <br>
-      <h2>Comment</h2>
-      <p>Comment is one of the official extension of the JstMStudio Profile. Users could add them to their post for viewer to comment. Users could also use it to get feedback on their post too.</p>
-      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fcomment.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+      <h2>Commentaire</h2>
+      <p>Comment est l'une des extensions officielles du profil Jst polyvalent lieu de travail. Les utilisateurs peuvent les ajouter à leur message pour que le spectateur puisse les commenter. Les utilisateurs peuvent également l'utiliser pour obtenir des commentaires sur leur publication.</p>
+      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fcomment.html&style =github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
       <br>
-      <hr>
+      <h>
       <br>
-      <h2>Like</h2>
-      <p>Like is one of the official extension of the JstMStudio Profile. Users could add them to their post for viewer and writer to show their reaction to the post. Users could also react to show their support too.</p>
-      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Flike.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+      <h2>J'aime</h2>
+      <p>Like est l'une des extensions officielles du profil Jst polyvalent lieu de travail. Les utilisateurs peuvent les ajouter à leur message pour que le spectateur et l'auteur montrent leur réaction au message. Les utilisateurs pourraient également réagir pour montrer leur soutien également.</p>
+      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Flike.html&style =github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
       <br>
-      <hr>
+      <h>
       <br>
-      <h2>Share</h2>
-      <p>Share is one of the official extension of the JstMStudio Profile. Users could add them to their post for viewer to share their post onto social media. Users could also react to show their support too by sharing the post.</p>
-      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fshare.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+      <h2>Partager</h2>
+      <p>Share est l'une des extensions officielles du profil Jst polyvalent lieu de travail. Les utilisateurs peuvent les ajouter à leur message pour que le spectateur puisse partager leur message sur les réseaux sociaux. Les utilisateurs peuvent également réagir pour montrer leur soutien en partageant la publication.</p>
+      <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fshare.html&style =github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
       <br>
-      <hr>
+      <h>
       <br>
-      <h2>Updown</h2>
-      <p>Updown is one of the official extension of the JstMStudio Profile. Users could add them to their post for viewer and writer to show their reaction to the post. Users could also react to show their support too. Updown could also used for polls too.</p>
+      <h2>Descendant</h2>
+      <p>Updown est l'une des extensions officielles du profil Jst polyvalent lieu de travail. Les utilisateurs peuvent les ajouter à leur publication pour que le spectateur et l'écrivain puissent montrer leur réaction à la publication. Les utilisateurs pourraient également réagir pour montrer leur soutien. Updown peut également être utilisé pour les sondages.</p>
       <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Web%2FWeb-App%2Fblob%2F068fa630ef3740efe71dba43dcd938f1395e6fce%2FExtension%2FCodes%2Fupdown.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>  
   </div>
 </div>
@@ -655,30 +655,30 @@ text-align: center;
 <div id="myNav1" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav1()">&times;</a>
   <div class="overlay-content">
-  <h1>Profile Search</h1>
-      <p>Welcome to JstMStudio Profile Search! A place to search for profile in JstMStudio Profile. A place to find and know more about each profile in JstMStudio. </p>
-      <br><br>
-      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for profile username" title="Type in a name">
-<ul id="myUL">
-  <li><button type="button" class="collapsible2">None</button>
+<h1>Recherche de profil</h1>
+       <p>Bienvenue dans la recherche de profil Jst polyvalent lieu de travail ! Un endroit pour rechercher un profil dans Jst polyvalent lieu de travail Profile. Un endroit pour trouver et en savoir plus sur chaque profil dans Jst polyvalent lieu de travail. </p>
+       <br><br>
+       <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Rechercher le nom d'utilisateur du profil" title="Saisir un nom">
+<ul id="monUL">
+   <li><button type="button" class="collapsible2">Aucun</button>
 <div class="content2">
-  <p>None</p>
+   <p>Aucun</p>
 </div></li>
-	<li><button type="button" class="collapsible2">None</button>
+<li><button type="button" class="collapsible2">Aucun</button>
 <div class="content2">
-  <p>None</p>
+   <p>Aucun</p>
 </div></li>
-  <li><button type="button" class="collapsible2">None</button>
+   <li><button type="button" class="collapsible2">Aucun</button>
 <div class="content2">
-  <p>None</p>
+   <p>Aucun</p>
 </div></li>
-  <li><button type="button" class="collapsible2">None</button>
+   <li><button type="button" class="collapsible2">Aucun</button>
 <div class="content2">
-  <p>None</p>
+   <p>Aucun</p>
 </div></li>
-  <li><button type="button" class="collapsible2">None</button>
+   <li><button type="button" class="collapsible2">Aucun</button>
 <div class="content2">
-  <p>None</p>
+   <p>Aucun</p>
 </div></li>
 </ul>
 
@@ -719,25 +719,25 @@ for (i = 0; i < coll.length; i++) {
   </div>
 </div>
 
-<h1>Profile</h1>
-      <p>JstMStudio Profile is a web-based social-networking site. Users could create and read posts made by content creator from all over the world. You could use JstMStudio Profile for free, with less restriction and most important of all, without any ads too.</p>
+<h1>Profil</h1>
+      <p>Jst polyvalent lieu de travail Profile est un site Web de réseautage social. Les utilisateurs peuvent créer et lire des messages rédigés par des créateurs de contenu du monde entier. Vous pouvez utiliser le profil Jst polyvalent lieu de travail gratuitement, avec moins de restrictions et surtout, sans aucune publicité.</p>
       <br>
-      <p>JstMStudio Profile is totally open source for everyone to study and view. You could also contribute to the project too. It is currently coded using HTML, CSS and JavaScript and licensed under MIT. JstMStudio Profile is a privacy friendly platform too. We do not share users' information to any third party and we tried our best to track as less data as possible. We would like to return user back to their own hand.</p>
+      <p>Jst polyvalent lieu de travail Profile est totalement open source pour que tout le monde puisse l'étudier et le voir. Vous pouvez aussi contribuer au projet. Il est actuellement codé en HTML, CSS et JavaScript et sous licence MIT. Jst polyvalent lieu de travail Profile est également une plate-forme respectueuse de la vie privée. Nous ne partageons pas les informations des utilisateurs avec des tiers et nous avons fait de notre mieux pour suivre le moins de données possible. Nous aimerions redonner à l'utilisateur sa propre main.</p>
       <br>
-      <p>JstMStudio Profile is a place that respect everyone freedom of speech. If you could have freedom of speech in real life, you should have it on the internet too so we would like to make this happen. You could post about anything here except for illegal or NSFW stuff.</p>
+      <p>Jst polyvalent lieu de travail Profile est un endroit qui respecte la liberté d'expression de chacun. Si vous pouviez avoir la liberté d'expression dans la vraie vie, vous devriez également l'avoir sur Internet, alors nous aimerions que cela se produise. Vous pouvez publier n'importe quoi ici, à l'exception des éléments illégaux ou NSFW.</p>
       <br>
-      <p>Everyone could now sign up for a writer account on JstMStudio Profile to create a profile and write post. Writer account could have a profile, edit their own profile, create post, use plugins on their post and etc. Writer account will have total freedom on their profile and posts too. If you are interested, you could sign up and apply by filling up the form below, it is open for everyone. By submitting, all application will be reviewed without 7 business day by JstMStudio members.</p>
+      <p>Tout le monde peut désormais créer un compte d'écrivain sur le profil Jst polyvalent lieu de travail pour créer un profil et rédiger un article. Le compte Writer peut avoir un profil, modifier son propre profil, créer une publication, utiliser des plugins sur sa publication, etc. Le compte Writer aura également une liberté totale sur son profil et ses publications. Si vous êtes intéressé, vous pouvez vous inscrire et postuler en remplissant le formulaire ci-dessous, il est ouvert à tous. En soumettant, toutes les candidatures seront examinées sans 7 jours ouvrables par les membres de Jst polyvalent lieu de travail.</p>
       <br>
-      <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlaiVNGbMk8Rlfdz7zsUeXTD0gNuJ2VXEnjAyK9Ss8Rs4vrA/viewform?fbzx=6439158439518808056"><span>Sign Up Here </span></a></button>
+      <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlaiVNGbMk8Rlfdz7zsUeXTD0gNuJ2VXEnjAyK9Ss8Rs4vrA/viewform?fbzx=6439158439518808056"><span>Inscrivez-vous ici</span></ a></bouton>
       <br>
 <br>
 <hr>
 <br>
-<h2>Useful Information</h2>
+<h2>Informations utiles</h2>
 <br>
-<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav()" id="extension">Extension</div>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight : gras ;border-style : solide ;" onclick="openNav()" id="extension">Extension</div>
 <br>
-<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav1()" id="profilesearch">Profile Search</div>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight : gras ;border-style : solide ;" onclick="openNav1()" id="profilesearch">Recherche de profil</div>
 <br>
 <script>
 function openNav() {
