--- a/Profile/pj-masks-fan.html
+++ b/Profile/pj-masks-fan.html
@@ -444,27 +444,27 @@ text-align: left;
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">OFUT</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
-        <a href="home.html">
+        <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
-       <a href="about.html">
+       <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
-       <a href="documentation.html">
+       <a href="../documentation.html">
          <i class='bx bxs-info-square'></i>
          <span class="links_name">Documentation</span>
        </a>
@@ -472,39 +472,39 @@ text-align: left;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="../projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
-       <a href="client.html">
+       <a href="../client.html">
         <i class='bx bx-user'></i>
          <span class="links_name">Client</span>
        </a>
        <span class="tooltip">Client</span>
      </li>
      <li>
-       <a href="web-app.html">
+       <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
-       <a href="api.html">
+       <a href="../api.html">
          <i class='bx bx-extension'></i>
          <span class="links_name">API</span>
        </a>
        <span class="tooltip">API</span>
      </li>
      <li>
-       <a href="store.html">
+       <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -725,8 +725,8 @@ function openCity(evt, cityName) {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of One Future Unified Team into a colour that you prefer. Select and choose from the color set below to make One Future Unified Team UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
