--- a/Profile/jst-tan.html
+++ b/Profile/jst-tan.html
@@ -380,29 +380,29 @@ color: cyan;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
-        <a href="home.html">
+        <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
-       <a href="about.html">
+       <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
-       <a href="documentation.html">
+       <a href="../documentation.html">
          <i class='bx bxs-info-square'></i>
          <span class="links_name">Documentation</span>
        </a>
@@ -410,39 +410,39 @@ color: cyan;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="../projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
-       <a href="client.html">
+       <a href="../client.html">
         <i class='bx bx-user'></i>
          <span class="links_name">Client</span>
        </a>
        <span class="tooltip">Client</span>
      </li>
      <li>
-       <a href="web-app.html">
+       <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
-       <a href="api.html">
+       <a href="../api.html">
          <i class='bx bx-extension'></i>
          <span class="links_name">API</span>
        </a>
        <span class="tooltip">API</span>
      </li>
      <li>
-       <a href="store.html">
+       <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -452,87 +452,87 @@ color: cyan;
 <img src="https://i.ibb.co/QKqKHWR/profile.png" style="width:300px;height:150px;float:left;">
   <br>
   <div style="float:center;height:150px;">
-  <h1>Jst Tan</h1>
-  <h4>Official Jst Tan profile on JstMStudioProfile, the owner of JstMStudio.</h4>
-  <i class='bx bx-location-plus'></i> Malaysia
-  </div>
-  <br><br><br><br>
-  <hr>
+<h1>Jst Tan</h1>
+   <h4>Profil officiel de Jst Tan sur Jst polyvalent lieu de travail Profile, le propriétaire de Jst polyvalent lieu de travail.</h4>
+   <i class='bx bx-location-plus'></i> Malaisie
+   </div>
+   <br><br><br><br>
+   <h>
 <br><br>
 <div class="tab">
-  <button class="tablinks" onmouseover="openCity(event, 'Profile')">Profile</button>
-  <button class="tablinks" onmouseover="openCity(event, 'Community')">Community</button>
-  <button class="tablinks" onmouseover="openCity(event, 'Social')">Social</button>
-  <button class="tablinks" onmouseover="openCity(event, 'Uploads')">Uploads</button>
+   <button class="tablinks" onmouseover="openCity(event, 'Profile')">Profil</button>
+   <button class="tablinks" onmouseover="openCity(event, 'Community')">Communauté</button>
+   <button class="tablinks" onmouseover="openCity(event, 'Social')">Social</button>
+   <button class="tablinks" onmouseover="openCity(event, 'Uploads')">Téléchargements</button>
 </div>
 
 <div id="Profile" class="tabcontent">
 <br>
-<h1>About Us</h1>
-  <p>I am Jst Tan from Malaysia, owner of JstMStudio. I am a web developer which programmed in HTML, CSS and JavaScript, story writer, video creator on YouTube and wiki editor on Miraheze. My main hobby is programming and my birthday is on 21 May.</p>
+<h1>À propos de nous</h1>
+  <p>Je suis Jst Tan de Malaisie, propriétaire de JstMStudio. Je suis un développeur web qui programme en HTML, CSS et JavaScript, scénariste, créateur de vidéos sur YouTube et éditeur de wiki sur Miraheze. Mon passe-temps principal est la programmation et mon anniversaire est le 21 mai.</p>
   <br>
-  <hr style="width:40%;margin: auto;">
+  <hr style="width:40%;margin:auto;">
   <br>
-  <h2>Education</h2>
+  <h2>Éducation</h2>
   <ul>
-  <li>Private</li>
+  <li>Privé</li>
   </ul>
   <br>
-  <hr style="width:40%;margin: auto;">
+  <hr style="width:40%;margin:auto;">
   <br>
-  <h2>Contact Info</h2>
+  <h2>Coordonnées</h2>
 <ul style="text-align:center;">
 <a href="https://www.facebook.com/JestonJst"><li>Facebook</li></a>
 <a href="https://www.instagram.com/jestonjst/"><li>Instagram</li></a>
 <a href="https://twitter.com/jestonjst"><li>Twitter</li></a>
 <a href="https://mastodon.social/web/@jsttan"><li>Mastodon</li></a>
-<a href="https://www.guilded.gg/profile/Qd5XEDk4"><li>Guilded</li></a>
+<a href="https://www.guilded.gg/profile/Qd5XEDk4"><li>Guildé</li></a>
 </ul>
   <br>
-  <hr style="width:40%;margin: auto;">
+  <hr style="width:40%;margin:auto;">
   <br>
-  <h2>Social Media</h2>
+  <h2>Médias sociaux</h2>
   <ul style="text-align:center;">
 <a href="https://www.facebook.com/JestonJst"><li>Facebook</li></a>
 <a href="https://www.instagram.com/jestonjst/"><li>Instagram</li></a>
 <a href="https://twitter.com/jestonjst"><li>Twitter</li></a>
 <a href="https://mastodon.social/web/@jsttan"><li>Mastodon</li></a>
-<a href="https://www.guilded.gg/profile/Qd5XEDk4"><li>Guilded</li></a>
+<a href="https://www.guilded.gg/profile/Qd5XEDk4"><li>Guildé</li></a>
 </ul>
   <br>
     <br>
-  <hr style="width:40%;margin: auto;">
+  <hr style="width:40%;margin:auto;">
   <br>
-  <h2>Family Members</h2>
+  <h2>Membres de la famille</h2>
   <ul>
-  <li>Private</li>
+  <li>Privé</li>
   </ul>
   <br>
-  <hr style="width:40%;margin: auto;">
+  <hr style="width:40%;margin:auto;">
   <br>
-  <h2>Languages</h2>
+  <h2>Langues</h2>
   <ul>
-  <li>English</li>
-  <li>Chinese</li>
+  <li>Anglais</li>
+  <li>Chinois</li>
   </ul>
 </div>
 
 <div id="Community" class="tabcontent">
 <br>
-<h1>Community</h1>
-  <p>Welcome to the official community of Jst Tan. A place to discuss about Jst Tan and for Jst Tan's fans and friends.</p>
-  <br>
-  <hr>
-  <br>
-  <h2>Fans</h2>
-  <ul>
-  <li>Example</li>
-  <li>Example</li>
-  </ul>
-  <br>
-  <hr>
-  <br>
-  <h2>Comment Section</h2>
+<h1>Communauté</h1>
+   <p>Bienvenue dans la communauté officielle de Jst Tan. Un endroit pour discuter de Jst Tan et pour les fans et amis de Jst Tan.</p>
+   <br>
+   <h>
+   <br>
+   <h2>Ventilateurs</h2>
+   <ul>
+   <li>Exemple</li>
+   <li>Exemple</li>
+   </ul>
+   <br>
+   <h>
+   <br>
+   <h2>Section des commentaires</h2>
   <div id="graphcomment"></div>
 <script type="text/javascript">
 
@@ -570,22 +570,22 @@ color: cyan;
 
 <div id="Social" class="tabcontent">
 <br>
-<h1>Social</h1>
-  <p>Welcome to Jst Tan social! A place to check out all posts made by Jst Tan. A place to get sneak peak, announcements and updates from Jst Tan. </p>
-  <br>
-  <hr>
-  <br>
-  <h2>Posts</h2>
-  <br>
-  <div style="background-color:yellow;padding:16px;color:blue;">
-        <!--- Change this to your post title   --->
-        <h3 id="firstpost">This is my first post.</h3><br>
-        <!--- Change this to your post subtitle --->
-        <p>Hello! This is my first post. I am happy to be Social Project.</p><br>
-        <!--- Change this to your post text or description --->
-        <hr style="width:40%;text-align:center;margin-left:auto;margin-right:auto;">
-        <div data-lyket-type="like" data-lyket-namespace="template" data-lyket-id="everybody-like-now" data-lyket-color="cyan" />
-        <button onclick="copyToClipboard()">Copy Link</button>
+<h1>Réseaux sociaux</h1>
+   <p>Bienvenue sur le réseau social de Jst Tan ! Un endroit pour consulter tous les messages publiés par Jst Tan. Un endroit pour obtenir un avant-goût, des annonces et des mises à jour de Jst Tan. </p>
+   <br>
+   <h>
+   <br>
+   <h2>Messages</h2>
+   <br>
+   <div style="background-color:yellow;padding:16px;color:blue;">
+         <!--- Remplacez-le par le titre de votre message --->
+         <h3 id="firstpost">Ceci est mon premier message.</h3><br>
+         <!--- Remplacez-le par le sous-titre de votre message --->
+         <p>Bonjour ! Ceci est mon premier message posté. Je suis heureux d'être Social Project.</p><br>
+         <!--- Remplacez-le par le texte ou la description de votre message --->
+         <hr style="width:40%;text-align:center;margin-left:auto;margin-right:auto;">
+         <div data-lyket-type="like" data-lyket-namespace="template" data-lyket-id="everybody-like-now" data-lyket-color="cyan" />
+         <button onclick="copyToClipboard()">Copier le lien</button>
         <script src="https://unpkg.com/@lyket/widget@latest/dist/lyket.js?apiKey=pt_eb09eedd724c781b92b6e026928ca4"></script>
 
         <script>
@@ -606,25 +606,25 @@ color: cyan;
 
 <div id="Uploads" class="tabcontent">
 <br>
-<h1>Uploads</h1>
-  <p>Welcome to Jst Tan uploads! A place to check out all uploads made by Jst Tan to JstMStudio platforms. A place to check out all contents uploaded and made by JstMStudio. </p>
-  <br>
-  <hr>
-  <br>
-  <h2>Books</h2>
-  <ul>
-  <li>Example</li>
-  <li>Example</li>
-  </ul>
-  <br>
-  <hr>
-  <br>
-  <h2>Video</h2>
-  <ul>
-  <li>Example</li>
-  <li>Example</li>
-  </ul>
-  <br>
+<h1>Téléchargements</h1>
+   <p>Bienvenue dans les mises en ligne de Jst Tan ! Un endroit pour vérifier tous les téléchargements effectués par Jst Tan sur les plateformes JstMStudio. Un endroit pour consulter tous les contenus téléchargés et créés par JstMStudio. </p>
+   <br>
+   <hr>
+   <br>
+   <h2>Livres</h2>
+   <ul>
+   <li>Exemple</li>
+   <li>Exemple</li>
+   </ul>
+   <br>
+   <hr>
+   <br>
+   <h2>Vidéo</h2>
+   <ul>
+   <li>Exemple</li>
+   <li>Exemple</li>
+   </ul>
+   <br>
 </div>
 
 <div class="clearfix"></div>
@@ -647,8 +647,8 @@ function openCity(evt, cityName) {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
