--- a/Profile/template.html
+++ b/Profile/template.html
@@ -448,89 +448,89 @@ body {font-family: "Lato", sans-serif;}
 <img src="https://i.ibb.co/QKqKHWR/profile.png" style="width:300px;height:150px;float:left;">
   <br>
   <div style="float:center;height:150px;">
-<h1>Modello</h1>
-   <h4>Lavorare</h4>
-   <i class='bx bx-location-plus'></i> Posizione
-   </div>
-   <br><br><br><br>
-   <h>
+<h1>Exemple</h1>
+     <h4>Travail</h4>
+    <i class='bx bx-location-plus'></i> Emplacement
+    </div>
+    <br><br><br><br>
+    <h>
 <br><br>
 <div class="tab">
-   <button class="tablinks" onmouseover="openCity(event, 'Profile')">Profilo</button>
-   <button class="tablinks" onmouseover="openCity(event, 'Community')">Community</button>
-   <button class="tablinks" onmouseover="openCity(event, 'Social')">Social</button>
-   <button class="tablinks" onmouseover="openCity(event, 'Uploads')">Caricamenti</button>
+    <button class="tablinks" onmouseover="openCity(event, 'Profile')">Profilo</button>
+    <button class="tablinks" onmouseover="openCity(event, 'Community')">Communauté</button>
+    <button class="tablinks" onmouseover="openCity(event, 'Social')">Social</button>
+    <button class="tablinks" onmouseover="openCity(event, 'Uploads')">Caricaments</button>
 </div>
 
 <div id="Profile" class="tabcontent">
 <br>
-<h1>Chi siamo</h1>
-   <p>Sono (nome utente) di (paese). io sono (età). Mi piace (hobby). Sono un (maschio/femmina). Il mio compleanno è il (compleanno).</p>
+<h1>À propos de nous</h1>
+   <p>Je suis (nom d'utilisateur) de (pays). J'ai (âge). J'aime (passe-temps). Je suis un (homme / femme). Mon anniversaire est (anniversaire).</p>
    <br>
-   <hr style="width:40%;margin: auto;">
+   <hr style="width:40%;margin:auto;">
    <br>
-   <h2>Istruzione</h2>
+   <h2>Éducation</h2>
    <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
+   <li>Exemple</li>
+   <li>Exemple</li>
    </ul>
    <br>
-   <hr style="width:40%;margin: auto;">
+   <hr style="width:40%;margin:auto;">
    <br>
-   <h2>Informazioni di contatto</h2>
+   <h2>Coordonnées</h2>
    <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
+   <li>Exemple</li>
+   <li>Exemple</li>
    </ul>
    <br>
-   <hr style="width:40%;margin: auto;">
+   <hr style="width:40%;margin:auto;">
    <br>
-   <h2>Social media</h2>
-   <i class='bx bxl-facebook-circle' ></i> Facebook
+   <h2>Réseaux sociaux</h2>
+   <i class = 'bx bxl-facebook-circle'> </i> Facebook
    <br>
-   <i class='bx bxl-instagram' ></i> Instagram
+   <i class = 'bx bxl-instagram'> </i> Instagram
    <br>
-   <i class='bx bxl-twitter' ></i> Twitter
+   <i class = 'bx bxl-twitter'> </i> Twitter
    <br>
-   <i class='bx bxl-mastodonte' ></i> Mastodonte
+   <i class = 'bx bxl-mastodon'> </i> Mastodon
    <br>
-   <i class='bx bxl-youtube' ></i> YouTube
+   <i class = 'bx bxl-youtube'> </i> YouTube
    <br>
      <br>
-   <hr style="width:40%;margin: auto;">
+   <hr style="width:40%;margin:auto;">
    <br>
-   <h2>Familiari</h2>
+   <h2>Membres de la famille</h2>
    <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
+   <li>Exemple</li>
+   <li>Exemple</li>
    </ul>
    <br>
-   <hr style="width:40%;margin: auto;">
+   <hr style="width:40%;margin:auto;">
    <br>
-   <h2>Lingue</h2>
+   <h2>Langues</h2>
    <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
+   <li>Exemple</li>
+   <li>Exemple</li>
    </ul>
   <br>
 </div>
 
 <div id="Community" class="tabcontent">
 <br>
-<h1>Comunità</h1>
-   <p>Benvenuto nella community ufficiale di {{Username}}. Un luogo per discutere di {{Username}} e per i fan e gli amici di {{Username}}.</p>
-   <br>
-   <h>
-   <br>
-   <h2>Tifosi</h2>
-   <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
-   </ul>
-   <br>
-   <h>
-   <br>
-   <h2>Sezione commenti</h2>
+<h1>Communauté</h1>
+    <p>Bienvenue dans la communauté officielle {{Username}}. Un endroit pour discuter de {{Username}} et pour les fans et amis de {{Username}}.</p>
+    <br>
+    <h>
+    <br>
+    <h2>Ventilateurs</h2>
+    <ul>
+    <li>Exemple</li>
+    <li>Exemple</li>
+    </ul>
+    <br>
+    <h>
+    <br>
+    <h2>Rubrique commentaires</h2>
   <div id="graphcomment"></div>
 <script type="text/javascript">
 
@@ -568,22 +568,22 @@ body {font-family: "Lato", sans-serif;}
 
 <div id="Social" class="tabcontent">
 <br>
-<h1>Social</h1>
-   <p>Benvenuto su {{Username}} social! Un posto dove controllare tutti i post pubblicati da {{Username}}. Un posto dove ottenere anticipazioni, annunci e aggiornamenti da {{Username}}. </p>
-   <br>
-   <h>
-   <br>
-   <h2>Post</h2>
-   <br>
-   <div style="background-color:yellow;padding:16px;color:blue;">
-         <!--- Cambia questo nel titolo del tuo post --->
-         <h3 id="firstpost">Questo è il mio primo post.</h3><br>
-         <!--- Cambia questo nel sottotitolo del tuo post --->
-         <p>Ciao! Questo è il mio primo post. Sono felice di essere Social Project.</p><br>
-         <!--- Modificalo nel testo o nella descrizione del tuo post --->
-         <hr style="width:40%;text-align:center;margin-left:auto;margin-right:auto;">
-         <div data-lyket-type="like" data-lyket-namespace="template" data-lyket-id="everybody-like-now" data-lyket-color="cyan" />
-         <button onclick="copyToClipboard()">Copia collegamento</button>
+<h1>Réseaux sociaux</h1>
+     <p>Bienvenue sur les réseaux sociaux de {{Username}} ! Un endroit pour vérifier tous les messages publiés par {{Username}}. Un endroit pour obtenir des aperçus, des annonces et des mises à jour de {{Username}}.</p>
+     <br>
+     <h>
+     <br>
+     <h2>Publier</h2>
+     <br>
+     <div style="background-color:yellow;padding: 16px;color: blue;">
+           < ! --- Changez ceci dans le titre de votre message --->
+           <h3 id = "firstpost"> Ceci est mon premier message. </h3> <br>
+           < ! --- Changez ceci dans le sous-titre de votre message --->
+           <p> Salut ! Ceci est mon premier message posté. Je suis heureux d'être Social Project. </p> <br>
+           < ! --- Modifiez-le dans le texte ou la description de votre message --->
+           <hr style = "width:40%; text-align:centre;margin-left:auto;margin-right :auto;">
+           <div data-lyket-type = "like" data-lyket-namespace = "template" data-lyket-id = "everybody-like-now" data-lyket-color = "cyan" />
+           <button onclick = "copyToClipboard ()"> Copier le lien </button>
         <script src="https://unpkg.com/@lyket/widget@latest/dist/lyket.js?apiKey=pt_eb09eedd724c781b92b6e026928ca4"></script>
 
         <script>
@@ -604,24 +604,24 @@ body {font-family: "Lato", sans-serif;}
 
 <div id="Uploads" class="tabcontent">
 <br>
-<h1>Caricamenti</h1>
-   <p>Benvenuto nei caricamenti di {{Username}}! Un posto dove controllare tutti i caricamenti effettuati da {{Username}} sulle piattaforme One Future Unified Team. Un posto dove controllare tutti i contenuti caricati e realizzati da One Future Unified Team. </p>
-   <br>
-   <h>
-   <br>
-   <h2>Libri</h2>
-   <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
-   </ul>
-   <br>
-   <h>
-   <br>
-   <h2>Video</h2>
-   <ul>
-   <li>Esempio</li>
-   <li>Esempio</li>
-   </ul>
+<h1>Téléchargements</h1>
+      <p>Bienvenue dans les mises en ligne de {{Username}} ! Un endroit pour vérifier tous les téléchargements effectués par {{Username}} sur les plates-formes Jst polyvalent lieu de travail. Un endroit pour vérifier tout le contenu téléchargé et créé par JstMStudio. </p>
+      <br>
+      <h>
+      <br>
+      <h2>Livres</h2>
+      <ul>
+      <li>Exemple</li>
+      <li>Exemple</li>
+      </ul>
+      <br>
+      <h>
+      <br>
+      <h2>Vidéo</h2>
+      <ul>
+      <li>Exemple</li>
+      <li>Exemple</li>
+      </ul>
   <br>
 </div>
 
@@ -645,7 +645,7 @@ function openCity(evt, cityName) {
 <br><br>
   <hr>
   <br>
-  <h1>Thèmes</h1>
+<h1>Thèmes</h1>
 <p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
